more fixes to get combobox to work on IE for mail demo. the To and Subject lines are now correctly working, although the editor still seems buggy, especially with writing new text while italics is pressed.
git-svn-id: http://svn.dojotoolkit.org/src@2587 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlComboBox.css
+++ b/trunk/src/widget/templates/HtmlComboBox.css
@@ -3,24 +3,16 @@ input.comboBoxInput {
 	border: 0px;
 }
 
-td.comboBoxOptions {
-	position: relative; 
-	overflow: visible; 
-	height: 1px;
-}
-
-div.comboBoxOptions {
+.comboBoxOptions {
 	font-family: Verdana, Helvetica, Garamond, sans-serif;
 	font-size: 0.7em;
 	background-color: white;
-	/* border: 1px solid black; */
 	border: 1px solid #afafaf;
-	/* padding: 2px; */
 	position: absolute;
-	/* FIXME: we probably need an iframe underlay on IE to prevent windowed controls from bleeding through */
 	z-index: 1000; 
 	overflow: auto;
 	-moz-opacity: 0;
+	cursor: default;
 }
 
 table.dojoComboBox {
